# ChimeraSim

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
config/: ports.json
design/: peripheral_concept.md
include/ChimeraSim/: control  gpio  i2c  spi  transport
python/: test_communication.py
source/controller/: CMakeLists.txt  ctrl_intf.cpp  ctrl_intf.hpp  ctrl_types.hpp  design.md
source/peripherals/: CMakeLists.txt
source/peripherals/adc/: CMakeLists.txt  sim_adc_basic.cpp  sim_chimera_adc.cpp
source/peripherals/can/: CMakeLists.txt  sim_can_basic.cpp
source/peripherals/clock/: CMakeLists.txt  sim_chimera_clock.cpp
source/peripherals/exti/: CMakeLists.txt  sim_chimera_exti.cpp
source/peripherals/gpio/: CMakeLists.txt  gpio_config.json  sim_chimera_gpio.cpp  sim_gpio_basic.cpp  sim_gpio_controlled.cpp  sim_gpio_driver.cpp  sim_gpio_hw_io.hpp  sim_gpio_intf.hpp  sim_gpio_types.hpp  sim_gpio_virtual.hpp
source/peripherals/i2c/: CMakeLists.txt  sim_i2c_basic.cpp  sim_i2c_driver.cpp  sim_i2c_types.hpp  sim_i2c_virtual.hpp
source/peripherals/interrupt/: CMakeLists.txt  sim_chimera_interrupt.cpp
source/peripherals/pwm/: CMakeLists.txt  sim_chimera_pwm.cpp
source/peripherals/sdio/: CMakeLists.txt  sim_chimera_sdio.cpp
source/peripherals/serial/: CMakeLists.txt  sim_chimera_serial.cpp
source/peripherals/spi/: CMakeLists.txt  sim_chimera_spi.cpp  sim_spi_basic.cpp  sim_spi_driver.cpp  sim_spi_intf.hpp  sim_spi_networked.cpp  sim_spi_types.hpp  sim_spi_virtual.hpp  spi_config.json
source/peripherals/system/: CMakeLists.txt  sim_chimera_system.cpp
source/peripherals/timer/: CMakeLists.txt  sim_chimera_timer.cpp  sim_chimera_timer.hpp
source/peripherals/timer/views/: sim_timer_base_intf.cpp  sim_timer_pwm_intf.cpp  sim_timer_tri_phase_pwm.cpp  sim_timer_trigger_intf.cpp
source/peripherals/uart/: CMakeLists.txt  sim_chimera_uart.cpp
source/peripherals/usart/: CMakeLists.txt  sim_chimera_usart.cpp
source/peripherals/usb/: CMakeLists.txt  sim_chimera_usb.cpp
source/peripherals/watchdog/: CMakeLists.txt  sim_chimera_iwdg.cpp  sim_chimera_watchdog.cpp
source/shared/: CMakeLists.txt  common_types.hpp  json_parser.cpp  json_parser.hpp
source/transport/: CMakeLists.txt  design.md  full_duplex_pipe.hpp  master_slave.cpp  master_slave.hpp
