# ====================================================
# Import sub-projects
# ====================================================
add_subdirectory("adc")
add_subdirectory("can")
add_subdirectory("clock")
add_subdirectory("config")
add_subdirectory("exti")
add_subdirectory("gpio")
add_subdirectory("interrupt")
add_subdirectory("pwm")
add_subdirectory("spi")
add_subdirectory("system")
add_subdirectory("timer")
add_subdirectory("uart")
add_subdirectory("usart")
add_subdirectory("usb")
add_subdirectory("watchdog")